--- a/projects/editor/src/lib/home/home.component.html
+++ b/projects/editor/src/lib/home/home.component.html
@@ -3,15 +3,9 @@
     <span class="header-buttons">
         <button
             mat-button
-            (click)="onAddForm()"
-        >
-            <mat-icon>add</mat-icon>New Form
-        </button>
-        <button
-            mat-button
             (click)="onImportForm()"
         >
-            <mat-icon>file_download</mat-icon>Import Form
+            <mat-icon>add</mat-icon>Add Form
         </button>
         <button
             mat-button
@@ -54,9 +48,9 @@
         <button
             mat-flat-button
             color="primary"
-            (click)="onAddForm()"
+            (click)="onImportForm()"
         >
-            <mat-icon>add</mat-icon>New Form
+            <mat-icon>add</mat-icon>Add Form
         </button>
     </div>
 </ng-template>
