--- a/projects/editor/src/lib/form/form.component.html
+++ b/projects/editor/src/lib/form/form.component.html
@@ -41,8 +41,9 @@
         [(tabIndex)]="toolbarTabIndex"
         [isEditMode]="isEditMode$ | async"
         (isEditModeChange)="onEditModeChanged($event)"
-        (duplicateForm)="onDuplicateForm()"
         (resetModel)="onResetModel()"
+        (duplicateForm)="onDuplicateForm()"
+        (exportForm)="onExportForm()"
         (toggleSidebars)="showSidebars = $event"
     >
     </editor-toolbar>
@@ -77,7 +78,7 @@
             class="header-content"
             headerContent
         >
-            <span>Active Field - {{ (activeField$ | async)._info.name | fieldName: (activeField$ | async).key }}</span>
+            <span>Active Field - {{ (activeField$ | async)._info.name | fieldName : (activeField$ | async).key }}</span>
             <mat-slide-toggle
                 labelPosition="before"
                 [(ngModel)]="isAdvanced"
