--- a/projects/editor/src/lib/home/home.component.scss
+++ b/projects/editor/src/lib/home/home.component.scss
@@ -1,32 +1,28 @@
 :host {
     display: flex;
-	flex-direction: column;
+    flex-direction: column;
+    height: 100%;
+    position: relative;
+}
+
+.mat-tab-group {
     height: 100%;
 }
 
-.header {
-    height: 48px;
-	flex-shrink: 0;
+.action-buttons {
+    position: absolute;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    box-sizing: border-box;
-    padding: 0 16px;
-    border-bottom: 1px solid rgba(0,0,0,.12);
-}
-
-.header-buttons {
-    display: inline-flex;
-    align-items: center;
+    justify-content: center;
     column-gap: 16px;
-}
-
-mat-tab-group {
-    height: calc(100% - 48px);
+    height: var(--header-height);
+    width: var(--add-form-width);
+    top: 0;
+    right: 0;
 }
 
 .empty-view {
-	flex-grow: 1;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
