--- a/projects/editor/src/lib/tree-item/tree-item.component.html
+++ b/projects/editor/src/lib/tree-item/tree-item.component.html
@@ -26,7 +26,7 @@
     <div
         *ngIf="hasOptions"
         class="tree-item-header-options"
-        [class.sticky]="stickyOptions"
+        [class.visible]="isMouseInside"
     >
         <button
             mat-icon-button
