--- a/projects/editor/src/lib/tree-item/tree-item.component.scss
+++ b/projects/editor/src/lib/tree-item/tree-item.component.scss
@@ -30,13 +30,18 @@
     column-gap: 4px;
 }
 
-.tree-item-header-options.sticky {
+.tree-item-header-options {
     position: sticky;
     right: 4px;
     background-color: white;
     border-radius: 50%;
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14),
         0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+    visibility: hidden;
+}
+
+.tree-item-header-options.visible {
+    visibility: visible;
 }
 
 .tree-item-side-line {
